	PR c++/71828 	* constexpr.c (cxx_eval_constant_expression) <case REALPART_EXPR>: 	For lval don't use cxx_eval_unary_expression and instead recurse 	and if needed rebuild the reference.

* g++.dg/cpp0x/constexpr-71828.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@238442 138bc75d-0d04-0410-961f-82ee72b054a4